# producer-consumer-architecture

./: .gitignore  README.md  TODO.md  consumer.py  env.example  producer.py  pyproject.toml
models/: entrance_tickets.py
