[project]
name = "producer-consumer-architecture"
version = "0.1.0"
description = ""
authors = [
    {name = "Martijn Daams",email = "ma.daams@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "pika (>=1.4.1,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
