[project]
name = "producer-consumer-architecture"
version = "0.1.0"
description = ""
authors = [{ name = "Martijn Daams", email = "ma.daams@outlook.com" }]
requires-python = ">=3.13"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "pika (>=1.4.1,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
]

[build-system]
requires = ["uv_build>=0.11.30,<0.12.0"]
build-backend = "uv_build"
